[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andes"
version = "0.1.0"
description = "ANDES: API-only SFT agent pipeline (generate + refine), no torch/cuda."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "pandas>=1.5",
  "requests>=2.28",
  "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["andes*"]
